[gd_scene load_steps=17 format=2]

[ext_resource path="res://classes/entity/passive/goonie/goonie_flap.png" type="Texture" id=1]
[ext_resource path="res://classes/entity/passive/goonie/goonie_swoop.png" type="Texture" id=6]
[ext_resource path="res://classes/entity/passive/goonie/goonie.gd" type="Script" id=9]
[ext_resource path="res://classes/zone/safety_net/safety_net.gd" type="Script" id=10]
[ext_resource path="res://classes/dejitter_group/dejitter_group.gd" type="Script" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12, 1 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 12, 7 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 43, 44 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 43, 0, 43, 44 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 86, 0, 43, 44 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 129, 0, 43, 44 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 172, 0, 43, 44 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 215, 0, 43, 44 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 258, 0, 43, 44 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "flap",
"speed": 10.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "swoop",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 12, 3 )

[node name="Goonie" type="StaticBody2D"]
z_index = 1
collision_mask = 0
script = ExtResource( 9 )

[node name="EntityRideArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
input_pickable = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="EntityRideArea"]
position = Vector2( 0, -8 )
shape = SubResource( 1 )

[node name="FeetRideArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16
input_pickable = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="FeetRideArea"]
position = Vector2( 0, -8 )
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )
one_way_collision = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -2 )
z_index = 3
frames = SubResource( 3 )
animation = "flap"
script = ExtResource( 11 )

[node name="SafetyNet" type="Area2D" parent="."]
position = Vector2( 0, -4 )
collision_layer = 0
collision_mask = 2
input_pickable = false
monitorable = false
script = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="SafetyNet"]
shape = SubResource( 4 )

[connection signal="body_entered" from="EntityRideArea" to="." method="_on_EntityRideArea_body_entered"]
[connection signal="body_exited" from="EntityRideArea" to="." method="_on_EntityRideArea_body_exited"]
[connection signal="area_entered" from="FeetRideArea" to="." method="_on_FeetRideArea_area_entered"]
[connection signal="area_exited" from="FeetRideArea" to="." method="_on_FeetRideArea_area_exited"]
[connection signal="body_entered" from="SafetyNet" to="SafetyNet" method="_on_SafetyNet_body_entered"]
[connection signal="body_exited" from="SafetyNet" to="SafetyNet" method="_on_SafetyNet_body_exited"]
